--- a/albumUSTA-masEco/css/main.css
+++ b/albumUSTA-masEco/css/main.css
@@ -32,60 +32,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-net:before {
-  content: "\e90f";
+.icon-card:before {
+  content: "\e906";
 }
-.icon-top10:before {
-  content: "\e90e";
+.icon-donwload:before {
+  content: "\e907";
 }
-.icon-arroba:before {
-  content: "\e90a";
-}
-.icon-hashtag:before {
-  content: "\e90b";
-}
-.icon-vivo:before {
-  content: "\e910";
-}
-.icon-versus:before {
-  content: "\e911";
-}
-.icon-calendar:before {
-  content: "\e908";
-}
-.icon-statistics:before {
-  content: "\e90d";
-}
-.icon-laminita:before {
-  content: "\e90c";
-}
-.icon-password:before {
-  content: "\e909";
-}
-.icon-campPlay:before {
+.icon-user:before {
   content: "\e900";
 }
-.icon-download:before {
+.icon-trophy:before {
   content: "\e901";
 }
-.icon-login:before {
+.icon-home:before {
   content: "\e902";
 }
-.icon-profile:before {
+.icon-challenges:before {
   content: "\e903";
 }
-.icon-registrer:before {
+.icon-statistics:before {
   content: "\e904";
 }
 .icon-signOff:before {
   content: "\e905";
 }
-.icon-team:before {
-  content: "\e906";
-}
-.icon-trophy:before {
-  content: "\e907";
-}
+
 
 
 /*Reset Style*/
@@ -275,7 +246,13 @@ table{
 
 /*Style Inicial*/
 .bgInicio{
-	background: url(../img/otros/fondo.jpg) #92C027;
+	/* background: url(../img/otros/fondo.jpg) #8A9E76; */
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#52663c+0,8a9e76+100 */
+background: #52663c; /* Old browsers */
+background: -moz-linear-gradient(45deg, #52663c 0%, #8a9e76 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg, #52663c 0%,#8a9e76 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg, #52663c 0%,#8a9e76 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52663c', endColorstr='#8a9e76',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 	/* background-size: 1000px; */
 }
 .contentFlex{
@@ -302,10 +279,10 @@ table{
 }
 .botonUno{
 	background: #F6F6F7;
-	color: #11A099;
+	color: #52663C;
 }
 .botonDos{
-	background: #11A099;
+	background: #52663C;
 	color: #fff;
 }
 .error{
@@ -328,8 +305,8 @@ table{
   text-align: center;
 }
 .tablaDatos th{
-  background: #747474;
-  color: #92C027;
+  background: #bbb;
+  color: #fff;
   font-family: 'gobold_extra1regular';
   font-size: 1rem;
   text-shadow: 1px 1px 5px #000;
@@ -338,10 +315,10 @@ table{
 .tablaDatos tr:nth-child(even){background-color: #f2f2f2}
 /*.tablaDatos tr:nth-child(odd){background-color: #f2f2f2}*/
 .titleContent{
-  background: #92C027;
+  background: #8A9E76;
   font-size: 1.7rem;
   padding: 0.3rem;
-  border-bottom: 8px solid #11A099;
+  border-bottom: 8px solid #52663C;
 }
 .msjEmail{
   background: #17BA9C;
@@ -414,7 +391,7 @@ table{
 }
 .cajaForm .formulario h4{
   text-align: center;
-  color: #11A099;
+  color: #52663C;
   text-shadow:1px 1px 2px rgba(0,0,0,0.3);
   font-size: 1.5rem;
 }
@@ -428,7 +405,7 @@ table{
   height: 40px;
   position: absolute;
   background: #F5F5F6;
-  color: #11A099;
+  color: #8A9E76;
   border-right: 1px solid #ccc;
   top: 1px;
   font-size: 1.1rem;
@@ -459,7 +436,7 @@ table{
 .cajaForm .formulario .pHabeas a{
   display: inline-block;
   text-decoration: underline;
-  color: #11A099;
+  color: #52663C;
   font-size: 0.8rem;
 }
 .cajaForm .txtForm{
@@ -468,7 +445,7 @@ table{
   font-size: 0.75rem;
 }
 .cajaForm .txtForm a{
-  color: #11A099;
+  color: #52663C;
   width: 150px;
   margin: 0.5rem auto 0.5rem;
   text-align: center;
@@ -483,7 +460,7 @@ background: -o-linear-gradient(top, rgba(253,253,253,1) 0%, rgba(226,226,226,1) 
 background: -ms-linear-gradient(top, rgba(253,253,253,1) 0%, rgba(226,226,226,1) 100%);
 background: linear-gradient(to bottom, rgba(253,253,253,1) 0%, rgba(226,226,226,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#e2e2e2', GradientType=0 );
-box-shadow: 0 3px  #92C027, 0 6px #11A099;
+box-shadow: 0 3px  #8A9E76, 0 6px #52663C;
 padding: 1rem;
 }
 .headerAlbum img{
@@ -491,7 +468,7 @@ padding: 1rem;
   margin: auto;
 }
 .footerAlbum{
-  box-shadow: 0 -3px  #92C027, 0 -6px #11A099;
+  box-shadow: 0 -3px  #8A9E76, 0 -6px #52663C;
   text-align: center;
 }
 .footerAlbum p{
@@ -531,7 +508,7 @@ padding: 1rem;
 }
 .panelControl nav ul li a:hover{
   padding-left: 1.5rem;
-  color: #11A099;
+  color: #52663C;
   border: 1px solid transparent;
 }
 .panelControl nav ul li a:before{
@@ -540,7 +517,7 @@ padding: 1rem;
   display: block;
   width:0%;
   height: 2px;
-  background: #11A099;
+  background: #52663C;
   left: 0px;
   bottom: 0px;
   transition: all 0.3s;
@@ -563,7 +540,7 @@ padding: 1rem;
   left: 9px;
   background: #F5F5F6;
   border-right: 1px solid #ccc;
-  color:#11A099;
+  color:#52663C;
   width: 40px;
   height: 40px;
   padding: 0rem 0.4rem;
@@ -813,7 +790,7 @@ padding: 1rem;
 .contentLaminita figure .frontal{
   display: block;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-  border-radius: 0.5rem;
+  border-radius: 12px;
   position: relative;
 }
 .contentLaminita figure .trasera{
@@ -825,8 +802,8 @@ padding: 1rem;
   transform:perspective(600px) rotateY(180deg);
   backface-visibility :hidden;
   overflow: auto;
-  background: rgba(7, 71, 68,0.9);
-  border: 3px inset #92C027;
+  background: rgba(69, 70, 38, 0.9);
+  /* border: 3px inset #52663C; */
   height: 100%;
 }
 .contentLaminita figure .trasera h3{
@@ -840,13 +817,20 @@ padding: 1rem;
 }
 .contentLaminita figure .trasera p{
   margin-top: 1rem;
-  text-align: justify;
-  font-size: 0.9rem;
+  text-align: left;
+  font-size: 15px;
 }
 .ingresoLaminita{
   margin-top: 2rem;
   text-align: center;
 }
+.contentLaminita .imgBig{
+  width: 370px;
+}
+.contentLaminita .imgBig img{
+  border-radius: 23px !important;
+}
+
 /*Perfil*/
 .perfil{
   width: 100%;
@@ -865,7 +849,7 @@ padding: 1rem;
   display: table;
   padding: 0.5rem;
   margin-bottom: 5px;
-  border-left: 2px solid #11A099;
+  border-left: 2px solid #52663C;
 }
 .perfil li [class^="icon-"]{
   font-size: 1.5rem;
@@ -994,12 +978,12 @@ padding: 1rem;
 .estadisticas a:hover, 
 .estadisticas input[type="submit"]:hover{
   transform: scale(1.05);
-  color: #11A099;
+  color: #52663C;
 }
 .estadisticas a:active, 
 .estadisticas input[type="submit"]:active{
   transform: scale(0.9);
-  color: #11A099;
+  color: #52663C;
 }
 .estadisticas td{
   position: relative;
@@ -1079,7 +1063,7 @@ padding: 1rem;
   transform: scale(0.9);
 }
 .equipos .listadoEquipos a.active{
-  background: #11A099;
+  background: #52663C;
 }
 
 .equipos .listadoEquipos a span{
