--- a/albumUSTA-masEco/css/main.css
+++ b/albumUSTA-masEco/css/main.css
@@ -246,14 +246,11 @@ table{
 
 /*Style Inicial*/
 .bgInicio{
-	/* background: url(../img/otros/fondo.jpg) #8A9E76; */
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#52663c+0,8a9e76+100 */
-background: #52663c; /* Old browsers */
-background: -moz-linear-gradient(45deg, #52663c 0%, #8a9e76 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(45deg, #52663c 0%,#8a9e76 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(45deg, #52663c 0%,#8a9e76 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52663c', endColorstr='#8a9e76',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	/* background-size: 1000px; */
+  background-image: url('../img/logos/bg.jpg');
+  background-repeat:no-repeat;
+  background-position: bottom center;
+
+
 }
 .contentFlex{
 	min-height: 100vh;
@@ -333,17 +330,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52663c', end
 
 /*Bienvenida*/
 .cajaBienvenida{
-  max-width: 500px;
+  /* max-width: 1000px !important; */
   text-align: center;
+  /* background: red; */
 }
 .cajaBienvenida p{
-  font-size: 5rem;
+  font-size: 3.5rem;
   font-family: 'gobold_extra1regular';
-  color: #fff;
-  text-shadow: 2px 2px 10px rgba(0,0,0,0.6)
+  color: #52663C;
+  /* text-shadow: 2px 2px 10px rgba(0,0,0,0.6) */
 }
 .cajaBienvenida .imgBienvenida{
-  width: 300px;
+  width: 600px;
   margin: 2rem auto;
 }
 .cajaBienvenida .btnBienvenida a{
@@ -362,7 +360,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52663c', end
     font-size: 3rem;
   }
   .cajaBienvenida .imgBienvenida{
-    width: 200px;
+    width: 400px;
   }
   .cajaBienvenida .grilla .celdax2{
     width: 100%;
