Se optimizan imagenes, se modifica la creación bd del usuario, para que el campo fecha acepte hora.

--- a/albumUSTA-masEco/css/main.css
+++ b/albumUSTA-masEco/css/main.css
@@ -248,9 +248,8 @@ table{
 .bgInicio{
   background-image: url('../img/logos/bg.jpg');
   background-repeat:no-repeat;
-  background-position: bottom center;
-
-
+  background-position: center center;
+  background-size: cover;
 }
 .contentFlex{
 	min-height: 100vh;
