--- a/albumUSTA-masEco/css/main.css
+++ b/albumUSTA-masEco/css/main.css
@@ -94,7 +94,7 @@ a{
 ul{
 	list-style: none;
 }
-input{
+input, select{
 	display: table;
 	width: 100%;
 	outline: none;
@@ -103,8 +103,12 @@ input{
 	background: #F6F6F7;
   border-radius: 0.3rem;
 }
-input[type="submit"]{
+input[type="submit"], select{
 	cursor: pointer;
+}
+select{
+  padding: 0.7rem;
+  padding-left: 2.8rem;
 }
 h1, h2, h3, h4, h5, h6{
 	font-family: 'gobold_extra1regular';
